# datsing

./: .gitattributes  .gitignore  README.md  pretrain.py  pyproject.toml  requirements.txt  utils.py
data/: __init__.py  dataset.py  download_data.py
data/m4/: Monthly-train.csv
data/tour/: monthly_in.csv
