[tool.poetry]
name = "datsing"
version = "0.1.0"
description = ""
authors = ["Lee Joonhun <jhlee63@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
black = "^23.1.0"
isort = "^5.12.0"
torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp39-cp39-linux_x86_64.whl", platform = "linux" }
numpy = "<1.20"
pytorch-lightning = "<1.9"
pytorch-forecasting = "^0.10.3"

[tool.black]
target-version = ["py39"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
